--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.header {
+    .header {
     background-color: #00a0d8;
     color: #f8f9fa;
 }
@@ -43,14 +43,27 @@
     height:100px;
 }
 
+.images:hover {opacity: .7;}
+
 .runningScore {
     float: left;
 }
 
 .roundScore {
     background-color: grey;
-    width: 100px;
+    width: 150px;
     margin-top: 20px;
+    padding:10px;
+}
+
+.totalScoreHeader {
+    background-color: grey;
+    width: 150px;
+    padding:10px;
+}
+
+.startButton {
+    color: darkgray;
 }
 
 @media only screen and (max-width: 992px) {
